--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -670,6 +670,8 @@ carrier_plural: "Carriers"
 CARRIER_BOW_HB: "Carrier Bow Hangar"
 CARRIER_MID_HB: "Carrier Mid Hangar"
 CARRIER_STERN_HB: "Carrier Stern Hangar"
+offspring_carrier: "Offspring carriers"
+offspring_carrier_plural: "Offspring carriers"
 phi_reactor_booster_1: "§G+20§! power \n§G-5%§! ship upkeep"
 phi_reactor_booster_2: "§G+50§! power \n§G-10%§! ship upkeep"
 phi_reactor_booster_3: "§G+100§! power \n§G-15%§! ship upkeep"
