--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -908,7 +908,10 @@ resolution_phi_aristocracy_repeal_5: "§RRepeal $resolution_phi_aristocracy_gove
 resolution_phi_aristocracy_repeal_5_desc: "The [global_event_country.GetGalCommunityOrGalImperium] oversteps its bounds by attempting to tell its members how to live. Frankly, it's insulting."
 resolution_phi_aristocracy_repeal_5_effect_success: "Repeals the §Y$resolution_phi_aristocracy_government_of_the_fittest$§! resolution, leaving §Y$resolution_phi_aristocracy_anti_slacker_act$§! as galactic law."
 
+vassal_phi: "Subject"
+vassal_phi_plural: "Subject"
 
+not_allowed_for_vassal:0 "$TRIGGER_FAIL$Not allowed for §Yvassal§! preset."
 
 requires_actor_domination_tradition:0 "$TRIGGER_FAIL$§They haven't §YDomination tradition§! They can't have vassal!§!"
 requires_domination_tradition:0 "$TRIGGER_FAIL$§We haven't §YDomination tradition§! Can't have vassal!§!"
