--- a/localisation/replace/phi_replace_l_english.yml
+++ b/localisation/replace/phi_replace_l_english.yml
@@ -88,7 +88,7 @@
  
  #Civics
  #civic_tooltip_technocracy_effects:2 "£building£ §YCapital Buildings§! replace some £job_administrator£ §Y$job_administrator$§! Jobs with £job_head_researcher£ §Y$job_head_researcher_plural$§!\n§Y$job_researcher_plural$§! also produce §Y0.5§! £unity£ Unity"
- civic_tooltip_exalted_priesthood_effects:1 "£building£ §YCapital Buildings§! replace some £job_administrator£ §Y$job_administrator$§! Jobs with £job_high_priest£ §Y$job_high_priest_plural$§!\n£job_priest£ §Y$job_priest_plural$§! produce §Y1§! additional £unity£ Unity."
+ civic_tooltip_exalted_priesthood_effects:1 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_high_priest£ §Y$job_high_priest_plural$§!\n£job_priest£ §Y$job_priest_plural$§! produce §Y1§! additional £unity£ Unity."
  civic_tooltip_byzantine_bureaucracy_effects: "£job_bureaucrat£ §Y$job_bureaucrat_plural$§! also produce §Y1§! £unity£ Unity and §Y1§! £stability£ $PLANET_STABILITY_TITLE$."
  civic_tooltip_franchising_effects: "Every colony will be released as a §YSubsidiary§!, with §Gmaxed§! Branch Office building slots.\n§RThis civic cannot be removed after the start of the game.§!"
  civic_tooltip_syncretic_evolution_effects:4 "Start the game with §Y12§! £pop£ Pops being of another, subservient, species and with §YGene Tailoring§! researched."
