--- a/localisation/replace/phi_replace_l_english.yml
+++ b/localisation/replace/phi_replace_l_english.yml
@@ -1,13 +1,11 @@
 ﻿l_english:
  # Traditions --> file traditions.yml
- tr_diplomacy_adopt_desc:4 "§E$TRADITIONS_ADOPT$:§!\n§HUnlocks Edict:§! $edict_diplomatic_grants$\n§Y$MOD_COUNTRY_DIPLOMACY_INFLUENCE_COST$§! reduced by §G100%§!."
+ tr_diplomacy_adopt_desc:4 "§HUnlocks Edict:§! $edict_diplomatic_grants$\n§Y$MOD_COUNTRY_DIPLOMACY_INFLUENCE_COST$§! reduced by §G100%§!."
  tr_diplomacy_finish_effect:1 "§E$TRADITIONS_FINISH$:§!\nAdopting all $tr_diplomacy_adopt$ will increase our §Y$MOD_COUNTRY_ENVOYS_ADD$§! by §G1§!."
- tr_diplomacy_eminent_diplomats_desc:0 "Diplomatic Weight: §G+100%§!\nEnvoys §YImproving Relations§! have a §G1%§! chance each month of acquiring a §YFavor§!."
  tr_diplomacy_entente_coordination_desc:0 "The amount we contribute towards the §YFederation Naval Capacity§! counts for twice as much.\nNaval Capacity §G+10%§!"
  tr_diplomacy_diplomatic_networking_desc:0 "Embassies: §G+10§! £unity£ §YUnity§!"
- 
+ tr_diplomacy_eminent_diplomats_desc:0 "Diplomatic Weight: §G+25%§!\nDiplomatic Acceptance: §G+5§!\nEnvoys §YImproving Relations§! have a §G1%§! chance each month of acquiring a §YFavor§!.\nEach §YEnvoy§! assigned to the Galactic Community provides an additional §G2.5%§! £diplo_weight£ Diplomatic Weight."
  tr_expansion_galactic_ambition_desc:7 "§Y$mod_starbases_upkeep_mult$§! reduced by §G20%§!.\n§YPlanetary Structures maintenance§! reduced by §G20%§!."
- 
  tr_discovery_databank_uplinks_desc: "§HUnlocks Edict:§! $edict_research_subsidies$\n§Y$mod_station_researchers_produces_mult$§! increased by §G50%§!."
  tr_discovery_polytechnic_education_desc: "§Y$MOD_LEADER_SPECIES_EXP_GAIN$§! increased by §G+50%§! and §Y$MOD_LEADER_SKILL_LEVELS$§! increased by §Y1§!.\n§YScientists§! start at level §Y3§!."
  tr_synchronicity_integrated_preservation_desc:4 "§Y$job_coordinator_plural$§! produce §Y1§! additional £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! and reduce §Y$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$§! by 2."
@@ -25,7 +23,8 @@
  tr_versatility_spatial_optimization_desc:0 "£pops£ §Y$MOD_POP_HOUSING_USAGE_MULT$§! reduced by §G20%§!."
  tr_subterfuge_double_agents_desc:0 "Whenever a hostile §YOperation§! targeting us fails, we gain §Y10§! Intel on the spying empire.\nDiplomatic Envoys: §G+1§!\nDiplomatic Weight: §G+25%§!"
  tr_subterfuge_finish_desc:0 "Successful §YOperations§! refund §G50%§! of their Infiltration Level Cost.\nPlanet Sensor Range: §G+3§!\nShip Sensor Range: §G+1§!\nAscension Perks Unlocked: §G+1§!"
- 
+ origin_tooltip_star_slingshot_effects:3 "- Start with a §H$quantum_catapult_ruined_slingshot$§! near your home system, and the technology necessary to repair and use it.\n- Your §HQuantum Catapults§! are §G50%§! more accurate\n- The §YQuantic Ambush§! bonus from catapulting fleets is increased to §G+50%§! Fire Rate."
+
  tr_adaptability_dietary_enrichment:0 "Dietary Enrichment"
  tr_adaptability_dietary_enrichment_desc:1 "£food£ §Y$mod_country_food_produces_mult$§! output increased by §G+10%§!.\nJobs upkeep §G-10%§!"
  tr_adaptability_dietary_enrichment_delayed:1 "The nutritional value of the nourishments we harvest for our populations can be increased through various enrichment techniques, enabling us to feed more mouths with less food."
@@ -53,6 +52,7 @@
  tr_mercantile_adaptive_economic_policies_desc:0 "Empire Sprawl from districts: §G-50%§!\nEmpire Sprawl from systems: §G-10%§!"
  tr_mercantile_trade_fleets_desc:0 "The amount we contribute towards the §YFederation Naval Capacity§! counts for §G50%§! more.\n\nEmpire Sprawl from districts: §G-50%§!\nEmpire Sprawl from systems: §G-10%§!"
  
+ tr_politics_finish_desc:0 "§G+100%§! £diplo_weight£ Diplomatic Weight\nUnlocks 4 special §YResolutions§! in the Galactic Community.\n$TRADITIONS_FINISH_AP$"
  #Colony Type
  col_bureau:0 "Bureaucratic Center"
  col_bureau_desc:1 "When bureaucracy reaches such a vast scale that it begins to seem fun!"
@@ -89,12 +89,11 @@
  #Civics
  #civic_tooltip_technocracy_effects:2 "£building£ §YCapital Buildings§! replace some £job_administrator£ §Y$job_administrator$§! Jobs with £job_head_researcher£ §Y$job_head_researcher_plural$§!\n§Y$job_researcher_plural$§! also produce §Y0.5§! £unity£ Unity"
  civic_tooltip_exalted_priesthood_effects:1 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_high_priest£ §Y$job_high_priest_plural$§!\n£job_priest£ §Y$job_priest_plural$§! produce §Y1§! additional £unity£ Unity."
- civic_tooltip_byzantine_bureaucracy_effects: "£job_bureaucrat£ §Y$job_bureaucrat_plural$§! also produce §Y1§! £unity£ Unity and §Y1§! £stability£ $PLANET_STABILITY_TITLE$."
+ civic_tooltip_byzantine_bureaucracy_effects: "£job_bureaucrat£ §Y$job_bureaucrat_plural$§! also produce §Y1§! £stability£ $PLANET_STABILITY_TITLE$."
  civic_tooltip_franchising_effects: "Every colony will be released as a §YSubsidiary§!, with §Gmaxed§! Branch Office building slots.\n§RThis civic cannot be removed after the start of the game.§!"
  civic_tooltip_syncretic_evolution_effects:4 "Start the game with §Y12§! £pop£ Pops being of another, subservient, species and with §YGene Tailoring§! researched."
  civic_tooltip_agrarian_idyll_effects:5 "§YGenerator§!, §YMining§! and §YAgriculture Districts§! provide §G1§! more £housing£ §YHousing§!\n§YCity Districts§! provide §R1§! less £housing£ §YHousing§!\n£job_farmer£ §Y$job_farmer_plural$§! also produce §G2§! £amenities£ §YAmenities§!\nEvery §HAgricolture District§! grants §G1§! £building£ §YBuilding Slot§!, except on Habitats."
  civic_tooltip_barbaric_despoilers_effects:7 "Cannot form §YMigration Treaties§!\nHas the '§Y$casus_belli_cb_despoliation$§!' casus belli on all other empires\n$allow_raiding$\nDecreased §YOpinion§! for most other empires"
- 
  #Weapons
  MISSILE_1:0 "Nuclear Missiles"
  MISSILE_1_DESC:0 "Space-to-space missiles equipped with high-yield nuclear warheads. Although based on old pre-space technology, these crude fire-and-forget weapons can be surprisingly effective at range.\nShip speed: §G+2.5%§!"
@@ -161,3 +160,8 @@ tr_politics_finish_desc:0 "§G+100%§! £diplo_weight£ Diplomatic Weight\nUnloc
 
  origin_tooltip_payback_effects:0 "§R- WARNING: Challenging Origin§!\n- Start with 10 fewer £pop£ Pops than normal.\n- Begins with several important technologies yet to be researched and with an infrastructural disadvantage.\n- A special §HArchaeological Site§! in your system: the destroyed battleship of your former invaders.\n- This origin will guarantee a number of pre-FTL civilizations throughout the galaxy, regardless of the §H$FE_PRIMITIVE_WORLDS$§! slider setting.\n- A random pre-FTL civilization will be uplifted to have the §H$origin_broken_shackles$§! origin.\n- An §HAdvanced Empire§! with the §H$origin_slavers$§! origin is spawned somewhere in the galaxy.\n\nStart with the policy set and unlocked to Full Scale Mobilization."
  origin_imperial_vassal_desc:1 "Our first endeavor beyond our home planet was a painful one, suddenly and brutally subjected to the whims of a foreign galactic power. Now we look towards a future in which we no longer live in the shadow of another empire.\n\nIf you are a vassal or a tributary, you do not cost any influence to the overlord."
+
+EDICT_DESC:8 "\n§E§HEmpire Edicts§! are divided into edicts and campaigns, and their cost is based on the empire-wide modifiers or, in the case of campaign for the military fleet, on the size of the fleet.\nCan be activated or deactivated by spending resources such as §H$unity$§! (£unity£).§!"
+
+BUILDINGS_TITLE:0 "Buildings, Slot total: $fl_building_capacity$"
+#fl_building_capacity: "[This.fl_building_capacity]"
