--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -916,6 +916,8 @@ resolution_phi_aristocracy_repeal_5: "§RRepeal $resolution_phi_aristocracy_gove
 resolution_phi_aristocracy_repeal_5_desc: "The [global_event_country.GetGalCommunityOrGalImperium] oversteps its bounds by attempting to tell its members how to live. Frankly, it's insulting."
 resolution_phi_aristocracy_repeal_5_effect_success: "Repeals the §Y$resolution_phi_aristocracy_government_of_the_fittest$§! resolution, leaving §Y$resolution_phi_aristocracy_anti_slacker_act$§! as galactic law."
 planet_researchers_phi: "$planet_researchers$"
+mod_planet_researchers_phi_physics_research_produces_mult:1 "£physics£ $physics_research$ from £job_physics_researcher£ [GetResearcherPlural]"
+mod_planet_researchers_phi_physics_research_produces_add: "$mod_planet_researchers_phi_physics_research_produces_mult$"
 vassal_phi: "Subject"
 vassal_phi_plural: "Subject"
 
@@ -931,8 +933,3 @@ mod_campaigns_upkeep_mult: "Campaigns Upkeep"
 
 
 mod_shipclass_starbase_build_speed_mult:0 "Starbase Build Speed"
-
-fl_building_capacity_color: "§Y[This.fl_building_capacity]§!"
-fl_building_capacity: "[This.fl_building_capacity]"
-fl_button_text: "§Y[This.fl_bslot_free_dyn]§!"
-BUILDINGS_TITLE:0 "Buildings, Slot free: §Y[This.fl_bslot_free_dyn]§!"
