--- a/localisation/replace/phi_replace_l_english.yml
+++ b/localisation/replace/phi_replace_l_english.yml
@@ -163,5 +163,5 @@ tr_politics_finish_desc:0 "§G+100%§! £diplo_weight£ Diplomatic Weight\nUnloc
 
 EDICT_DESC:8 "\n§E§HEmpire Edicts§! are divided into edicts and campaigns, and their cost is based on the empire-wide modifiers or, in the case of campaign for the military fleet, on the size of the fleet.\nCan be activated or deactivated by spending resources such as §H$unity$§! (£unity£).§!"
 
-BUILDINGS_TITLE:0 "Buildings, Slot total: $fl_building_capacity$"
-#fl_building_capacity: "[This.fl_building_capacity]"
+ civic_tooltip_machine_servitor_effects:12 "Start the game with §Y5§! organic £pop£ Pops with £job_bio_trophy£ §Y$citizenship_organic_trophy$§! citizenship and §Y$living_standard_organic_trophy$§! living standard\nCan construct £building£ §Y$building_organic_sanctuary$§! Buildings that allow Bio-Trophies to produce £unity£ §YUnity§! and £society_research£ §YSociety research§! instead of regular Machine Empire buildings such as the £building£ §Y$building_uplink_node$§!\n\nGrants access to the £building£ §Y$holding_organic_sanctuary$§! Holding"
+
