--- a/localisation/replace/phi_replace_l_english.yml
+++ b/localisation/replace/phi_replace_l_english.yml
@@ -8,7 +8,7 @@
  tr_expansion_galactic_ambition_desc:7 "§Y$mod_starbases_upkeep_mult$§! reduced by §G20%§!.\n§YPlanetary Structures maintenance§! reduced by §G20%§!."
  tr_discovery_databank_uplinks_desc: "§HUnlocks Edict:§! $edict_research_subsidies$\n§Y$mod_station_researchers_produces_mult$§! increased by §G50%§!."
  tr_discovery_polytechnic_education_desc: "§Y$MOD_LEADER_SPECIES_EXP_GAIN$§! increased by §G+50%§! and §Y$MOD_LEADER_SKILL_LEVELS$§! increased by §Y1§!.\n§YScientists§! start at level §Y3§!."
- tr_synchronicity_integrated_preservation_desc:4 "§Y$job_coordinator_plural$§! produce §Y1§! additional £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! and reduce §Y$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$§! by 2."
+ tr_synchronicity_integrated_preservation_desc:4 "§Y$job_coordinator_plural$§! produce §Y0.25§! additional £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! and §Y$job_evaluator_plural$§! reduce  §Y$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$§! by 2."
  tr_harmony_finish_effect:7 "§E$TRADITIONS_FINISH$:§!\nAdopting all $tr_harmony_adopt$ will reduce §Y$MOD_EMPIRE_SIZE_POPS_MULT$§! by §G10%§! and allow the §YDisarmament§! diplomatic stance."
  tr_supremacy_finish_effect:1 "§E$TRADITIONS_FINISH$:§!\nAdopting all $tr_supremacy_adopt$ will unlock the §YWar Doctrines§! Policies and allow the §YFull Scale Mobilization§! diplomatic stance."
  tr_domination_colonial_viceroys_desc:0 "§Y$MOD_LEADER_GOVERNOR_SKILL_LEVELS$§! increased by §Y2§!.\n§YRulers§! and §YGovernors§! start at level §Y3§!.\n\nMonthly Influence: §G+0.5§!"
