--- a/localisation/german/phi_l_german.yml
+++ b/localisation/german/phi_l_german.yml
@@ -56,8 +56,8 @@ casus_belli_cb_phi_subjugation: "Subjugation"
 wg_phi_plunder_accept_them: "§Y[From.GetName]§! is raided, reducing their §YMineral§!, §YEnergy§! and §YAlloys§! production for §Y10§! years"
 wg_phi_plunder_accept_them_hm: "§Y[From.GetName]§! is raided, reducing their §YMineral§!, §YEnergy§!, §YFood§! and §YAlloys§! production for §Y10§! years"
 wg_phi_plunder_accept_them_as: "§Y[From.GetName]§! is raided, reducing their §YMineral§!, §YEnergy§! adnd §YAlloys§! production and pop have reduction happines for §Y10§! years"
-wg_phi_plunder_accept_us:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! : \n§G+50§! £energy£\n§G+20§! £alloys£, £minerals£ £unity£, £physics_research£, £society_research£, £engineering_research£ \n\n§Y10%§! random pop will be §Rabducted§!"
-wg_phi_plunder_accept_us_hiveMind:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! :\n§G+50§! £food£, £minerals£\n§G+20§! £energy£, £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£ \n\n§Y5%§! random pop will be §Rkilled§!"
+wg_phi_plunder_accept_us:0 "§Y[Root.GetName]§! Einnahmen für jede Pop von §Y[From.GetName]§! : \n§G+50§! £energy£\n§G+20§! £alloys£, £minerals£ £unity£, £physics_research£, £society_research£, £engineering_research£ \n§Y10%§! zufällige Pop wird §Rabducted§!"
+wg_phi_plunder_accept_us_hiveMind:0 "§Y[Root.GetName]§! Einnahmen für jede Pop von §Y[From.GetName]§! :\n§G+50§! £food£, £minerals£\n§G+20§! £energy£, £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£ \n§Y5%§! zufällige Pop wird §Rkilled§!"
 
 wg_phi_plunder_accept_us_machine:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! :\n§G+50§! £energy£, £minerals£, £alloys£\n§G+20§! £unity£, £society_research£ \n\n§Y5%§! random pop will be §Rkilled§!"
 
@@ -973,3 +973,7 @@ mod_planet_building_engineering_lab_1_build_speed_mult:0 "Ingenieurlabor Baubesc
 
 civic_hive_despoilers_desc:0 "$civic_barbaric_despoilers_desc$"
 civic_machine_despoilers_desc:0 "$civic_barbaric_despoilers_desc$"
+
+edict_archeologist_spedition: "Archäologische Expedition"
+edict_archeologist_spedition_desc: "Durch die Durchführung einer archäologischen Expedition könnten wir einige Artefakte innerhalb unseres Reiches finden."
+phi_pm_atmospheric_pollution: "Luftverschmutzung"
