--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -54,8 +54,8 @@ casus_belli_cb_phi_subjugation: "Soggiogazione"
 wg_phi_plunder_accept_them: "§Y[From.GetName]§! is plundered, reducing their production of §YMinerals§!, §YEnergy§!, and §YAlloys§! for §Y10§! years."
 wg_phi_plunder_accept_them_hm: "§Y[From.GetName]§! is plundered, reducing their production of §YMinerals§!, §YEnergy§!, §YFood§!, and §YAlloys§! for §Y10§! years."
 wg_phi_plunder_accept_them_as: "§Y[From.GetName]§! is plundered, reducing their production of §YMinerals§!, §YEnergy§!, and §YAlloys§!, and the happiness of their population for §Y10§! years."
-wg_phi_plunder_accept_us:0 "§Y[Root.GetName]§! gains for each population of §Y[From.GetName]§!:\n§G+50§! £energy£\n§G+20§! £alloys£, £minerals£, £unity£, £physics_research£, £society_research£, £engineering_research£\n\n§Y10%§! of a random population will be §Raided§!"
-wg_phi_plunder_accept_us_hiveMind:0 "§Y[Root.GetName]§! gains for each population of §Y[From.GetName]§!:\n§G+50§! £food£, £minerals£\n§G+20§! £energy£, £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£\n\n§Y5%§! of a random population will be §RKilled§!"
+wg_phi_plunder_accept_us:0 "§Y[Root.GetName]§! Ottieni per ogni pop di §Y[From.GetName]§! : \n§G+50§! £energy£\n§G+20§! £alloys£, £minerals£ £unity£, £physics_research£, £society_research£, £engineering_research£ \n§Y10%§! una popolazione casuale sarà §Rabducted§!"
+wg_phi_plunder_accept_us_hiveMind:0 "§Y[Root.GetName]§! Ottieni per ogni pop di §Y[From.GetName]§! :\n§G+50§! £food£, £minerals£\n§G+20§! £energy£, £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£ \n§Y5%§! una popolazione casuale sarà §Rkilled§!"
 wg_phi_plunder_accept_us_machine:0 "§Y[Root.GetName]§! gains for each population of §Y[From.GetName]§!:\n§G+50§! £energy£, £minerals£, £alloys£\n§G+20§! £unity£, £society_research£\n\n§Y5%§! of a random population will be §Killed§!"
 wg_phi_plunder_accept_us_assimilator:0 "§Y[Root.GetName]§! gains for each population of §Y[From.GetName]§!:\n§G+50§! £energy£, £minerals, £alloys£\n§G+20§! £unity£, £physics_research£, £society_research£, £engineering_research£\n\n§Y10%§! of a random population will be §Raided§! and will be §RAssimilated§!"
 wg_phi_plunder_accept_us_1:0 "§Y[Root.GetName]§! gains:\n§G+500§! £energy£, £minerals£\n§G+250§! £alloys£, £unity£, £physics_research£, £society_research£, £engineering_research£."
@@ -981,3 +981,7 @@ mod_planet_building_engineering_lab_1_build_speed_mult:0 "Velocità di costruzio
 
 civic_hive_despoilers_desc:0 "$civic_barbaric_despoilers_desc$"
 civic_machine_despoilers_desc:0 "$civic_barbaric_despoilers_desc$"
+
+edict_archeologist_spedition: "Spedizione archeologica"
+edict_archeologist_spedition_desc: "Avviando una spedizione archeologica, potremmo scoprire artefatti all'interno del nostro impero."
+phi_pm_atmospheric_pollution: "Inquinamento atmosferico"
